@@ -72,7 +72,11 @@ if (isActionAccessible($guid, $connection2, '/modules/Messenger/cannedResponse_m
                 exit();
             }
 
-            $URL .= '&return=success0';
+            //Last insert ID
+            $AI = str_pad($connection2->lastInsertID(), 10, '0', STR_PAD_LEFT);
+
+            //Success 0
+            $URL .= "&return=success0&editID=$AI";
             header("Location: {$URL}");
         }
     }
